Few Sonar Fixes