@@ -1,12 +1,7 @@
 package uk.gov.companieshouse.servicesdashboardapi.service.deptrack;
 
 import java.io.IOException;
-import java.util.AbstractMap;
-import java.util.Map;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
+import java.util.*;
 
 import com.fasterxml.jackson.core.type.TypeReference;
 
@@ -80,9 +75,12 @@ public class GetAllProjects extends DepTrackGetDataService <List<DepTrackProject
          allProjects.addAll(result);
 
          // Get the total count from the response headers
-         if (totalCount == 0 && response.getHeaders().containsKey(headerTotalCount)) {
-               totalCount = Integer.parseInt(response.getHeaders().get(headerTotalCount).get(0));
-         }
+          if (totalCount == 0 && response.getHeaders().containsKey(headerTotalCount)) {
+              List<String> count = response.getHeaders().get(headerTotalCount);
+              if (null != count && !count.isEmpty() && null != count.getFirst()) {
+                  totalCount = Integer.parseInt(count.getFirst());
+              }
+          }
 
          offset += result.size();
 
